--- a/editor/editor.html
+++ b/editor/editor.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Level Editor</title>
 
-    <link href="style.css" rel="stylesheet">
+    <link href="../styles/style.css" rel="stylesheet">
 </head>
 <body>
-    <script src="main.js"></script>
+    <script src="../src/main.js"></script>
 
     <canvas class="center" width="320" height="240"></canvas>
 
@@ -38,6 +38,8 @@
         </div>
     </div>
 
-    <div class="loading" id="loading-screen"></div>
+    <div class="loading" id="loading-screen">
+        <p>Loading...</p>
+    </div>
 </body>
 </html>
