main page changes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudSuite - Home</title>
 
-    <link href="style.css" rel="stylesheet">
-    <link href="site-style.css" rel="stylesheet">
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="styles/site-style.css" rel="stylesheet">
 </head>
 <body>
     <h1>StudSuite</h1>
@@ -14,6 +14,6 @@
 
     <h2>What can StudSuite do?</h2>
 
-    <button onclick='window.location = "editor.html"'>Try it now!</button>
+    <button onclick='window.location = "editor/editor.html"'>Try it now!</button>
 </body>
 </html>
