--- a/editor/editor.html
+++ b/editor/editor.html
@@ -26,7 +26,7 @@
 
     <div class="toolbar">
         <div class="container">
-            <button onclick="window.location = 'index.html'">Home</button>
+            <button onclick="window.location = '../index.html'">Home</button>
             <div class="dropdown">
                 <button class="dropdown">File</button>
                 <div class="dropdown-content">
