--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>StudSuite - Home</title>
+        <title>StudHut</title>
 
         <link href="styles/style.css" rel="stylesheet" />
         <link href="styles/site-style.css" rel="stylesheet" />
+        <link href="favicon.png" rel="icon">
     </head>
     <body>
-        <h1>StudSuite</h1>
+        <h1>StudHut</h1>
         <h3>A simple LEGO™ game level editor.</h3>
 
-        <h2>What can StudSuite do?</h2>
+        <img src="favicon.png">
+
+        <h2>What can StudHut do?</h2>
+
+        <p>It can do things ig</p>
 
         <button onclick='window.location = "editor/editor.html"'>
             Try it now!
