--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StudSuite - Home</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>StudSuite - Home</title>
 
-    <link href="styles/style.css" rel="stylesheet">
-    <link href="styles/site-style.css" rel="stylesheet">
-</head>
-<body>
-    <h1>StudSuite</h1>
-    <h3>A simple LEGO™ game level editor.</h2>
+        <link href="styles/style.css" rel="stylesheet" />
+        <link href="styles/site-style.css" rel="stylesheet" />
+    </head>
+    <body>
+        <h1>StudSuite</h1>
+        <h3>A simple LEGO™ game level editor.</h3>
 
-    <h2>What can StudSuite do?</h2>
+        <h2>What can StudSuite do?</h2>
 
-    <button onclick='window.location = "editor/editor.html"'>Try it now!</button>
-</body>
+        <button onclick='window.location = "editor/editor.html"'>
+            Try it now!
+        </button>
+    </body>
 </html>
