fix home page for mobile devices

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>StudHut</h1>
         <h3>A simple LEGO™ game level editor.</h3>
 
-        <img src="favicon.png">
+        <img class="icon" src="favicon.png">
 
         <h2>What can StudHut do?</h2>
 
