--- a/editor/editor.html
+++ b/editor/editor.html
@@ -32,13 +32,13 @@
 
         <div class="left">
             <div class="container">
-                <p>Hello,</p>
+                <!-- <p>Hello,</p> -->
             </div>
         </div>
 
         <div class="right">
             <div class="container">
-                <p>World!</p>
+                <!-- <p>World!</p> -->
             </div>
         </div>
 
