convert project to typescript

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-        <script src="../src/main.js" type="module"></script>
+        <script src="../out/js/main.js" type="module"></script>
         <!-- <script type="module" src="../src/canvas.js"></script> -->
 
         <canvas
