--- a/editor.html
+++ b/editor.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>StudHut Editor</title>
 
-        <link href="../styles/style.css" rel="stylesheet" />
-        <link href="../styles/editor-style.css" rel="stylesheet" />
-        <link href="../favicon.png" rel="icon" />
+        <link href="styles/style.css" rel="stylesheet" />
+        <link href="styles/editor-style.css" rel="stylesheet" />
+        <link href="favicon.png" rel="icon" />
 
         <script type="importmap">
             {
@@ -20,7 +20,7 @@
     </head>
 
     <body>
-        <script src="../out/js/main.js" type="module"></script>
+        <script src="out/js/main.js" type="module"></script>
         <!-- <script type="module" src="../src/canvas.js"></script> -->
 
         <canvas
