--- a/editor.html
+++ b/editor.html
@@ -65,5 +65,8 @@
                 </div> -->
             </div>
         </div>
+        <div class="status" id="status-screen">
+            Loading Text
+        </div>
     </body>
 </html>
