fix site layout and links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <p>It can do things ig</p>
 
-        <button onclick='window.location = "editor/editor.html"'>
+        <button onclick='window.location = "editor.html"'>
             Try it now!
         </button>
     </body>
