move scene loading function to import button

--- a/editor.html
+++ b/editor.html
@@ -53,9 +53,9 @@
                         <p>File</p>
                     </button>
                     <div class="dropdown-content">
-                        <button id="open-button">Open</button>
-                        <button id="save-button">Save</button>
-                        <button id="import-button">Import</button>
+                        <button id="open-button">Open Project...</button>
+                        <button id="save-button">Save Project...</button>
+                        <button id="import-button">Import Level...</button>
                     </div>
                 </div>
                 <div class="dropdown">
